# sikil

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  build.rs  sikil.1
.agents/: PROMPT.md  loop.sh
docs/: PLAN.md  PRD.md  PROMPT_RALPH_ONCE.md  PROMPT_TEMPLATE.md  TRD.md  binary-benchmark.md  coding-practices.md  writing-plan.md  writing-specs.md  writing-verify-script.md
examples/: generate_man_page.rs
plan/: PRD.md  TRD.md  implementation_roadmap.md  use_cases.md
ralph/: PROMPT.md  loop.sh
scripts/: build.sh  complete-task.sh  finish-task.sh  generate-man.sh  install.sh  test.sh  validate-commit-msg.sh  verify.sh
specs/: README.md  agent-model.md  agent-targeting.md  atomic-operations.md  build-and-platform.md  cache.md  cli-output.md  cli-schema.md  configuration.md  conflict-detection.md  error-handling.md  filesystem-paths.md  git-operations.md  implementation_roadmap.md  shell-completions.md  skill-adoption.md  skill-discovery.md  skill-installation.md  skill-model.md  skill-removal.md  skill-scanner.md  skill-synchronization.md  skill-unmanagement.md  skill-validation.md  symlink-operations.md  testing-strategy.md  traceability_matrix.md
src/: lib.rs  main.rs
tests/: build_test.rs  cli_framework_test.rs  common_helpers_test.rs  config_command_test.rs  conflict_detection_test.rs  e2e_test.rs  error_handling_test.rs  filesystem_utils_test.rs  install_command_test.rs  list_command_test.rs  parser_integration_test.rs  performance_test.rs  show_command_test.rs  unmanage_command_test.rs  validate_command_test.rs
(+54 files in other folders)
