[package]
name = "sikil"
version = "0.1.0"
authors = ["noviadi"]
license = "MIT"
edition = "2021"
description = "A CLI tool for managing Agent Skills across multiple AI coding agents"
repository = "https://github.com/noviadi/sikil"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "0.8"
walkdir = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"
thiserror = "1"
anstream = "0.6"
anstyle = "1"
shellexpand = "3"
directories = "5"
fs-err = "2"
tempfile = "3"
once_cell = "1"
regex = "1"
sha2 = "0.10"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["yaml"] }
